--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-notifications": "^1.7.4",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
