--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
+    "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.11"
